# xd

./: .env.example  .gitignore  README.md  build_apk_log.txt  build_apk_log_vv.txt  build_log.txt  controlatuvida.db  main.py  pyproject.toml  requirements.txt
.github/workflows/: android-apk.yml
app/: db.py
supabase/: schema.sql
